# rok_resource_assistant

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
config/: app_config.json
docs/: architecture.md  packaging.md
scripts/: build_windows.ps1  validate_packaging.py
tests/: db_helpers.py  test_account_config.py  test_account_config_gui.py  test_account_switch_workflow.py  test_action_engine.py  test_alliance_gift_collection_workflow.py  test_alliance_help_workflow.py  test_alliance_pit_workflow.py  test_alliance_rally_join_workflow.py  test_alliance_resource_collection_workflow.py  test_alliance_technology_donation_workflow.py  test_architecture_boundaries.py  test_automation_service.py  test_character_switch_workflow.py  test_city_mail_collection_workflow.py  test_city_material_production_workflow.py  test_city_resource_collection_workflow.py  test_city_tavern_chest_workflow.py  test_city_troop_collection_workflow.py  test_database.py  test_database_migrations.py  test_database_repositories.py  test_database_restore.py  test_database_task_history.py  test_database_transactions.py  test_database_v2_repositories.py  test_emulator_manager_legacy_commands.py  test_evidence_capture.py  test_game_reboot_workflow.py  test_gathering_resource_type.py  test_gem_gathering_workflow.py  test_gui_widgets.py  test_image_matching.py  test_image_recognition_gui.py  test_inventory_item_use_workflow.py  test_lost_canyon_workflow.py  test_map_fog_exploration_workflow.py  test_march_config_gui.py  test_memu_adb_input_manager.py  (+28 more)
(+147 files in other folders)
