[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rok-resource-assistant"
version = "0.1.0"
description = "PyQt6 and SQLite desktop assistant for emulator instance and resource task management."
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7,<7.0",
  "opencv-python-headless>=4.10,<5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
